src/objects/Zuora__SubscriptionChargeTierHistory__c.object
<CustomObject>
    <description>A product rate plan charge tier holds the prices for a product rate plan charge. Each product rate plan charge has at least one tier associated with it.</description>
    <fields>
        <fullName>Zuora__CreatedDate__c</fullName>
        <description>The date when the Subscription Product &amp; Charge Tier was created in the Zuora system.</description>
        <label>Zuora Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__DiscountAmount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__DiscountPercentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__EndingUnit__c</fullName>
        <description>The end number of a range of units for the tier.</description>
        <label>Ending Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__IncludedUnits__c</fullName>
        <label>Included Units</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__OveragePrice__c</fullName>
        <label>Overage Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__PriceFormat__c</fullName>
        <description>Indicates if the price is a flat fee or is per unit.</description>
        <label>Price Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Price__c</fullName>
        <description>The price of the tier if the charge is a flat fee, or the price of each unit in the tier if the change model is tiered pricing.</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__StartingUnit__c</fullName>
        <description>The start number of a range of units for the tier.</description>
        <label>Starting Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__SubscriptionProductChargeHistory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Product &amp; Charge</label>
        <referenceTo>Zuora__SubscriptionProductChargeHistory__c</referenceTo>
        <relationshipName>SubscriptionRatePlanChargeTiersHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__Tier__c</fullName>
        <description>A unique number that identifies the tier that the price applies to.</description>
        <label>Tier</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__UpdatedDate__c</fullName>
        <description>The date when the Subscription Product &amp; Charge Tier was updated in the Zuora system.</description>
        <label>Zuora Updated Date</label>
        <type>DateTime</type>
    </fields>
    <label>Subscription Charge Tier History</label>
    <nameField>
        <label>Subscription Rate Plan Charge Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SubscriptionRatePlanChargeTiersHistory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>